fix header/footer heights. remove whitespace between front-page imgs. close #24. fix hidden front-page on safari. close #25

--- a/css/site.styl
+++ b/css/site.styl
@@ -86,9 +86,9 @@ img
 
 // FRONT PAGE 
 
-.front-page-section
-  text-align: center
-  z-index: 1000
+.scroll-cols-holder
+  // eliminates white-space between imgs
+  font-size: 0
 
 // ******************************************************
 
